websocket-debugger/src/test/resources/TestCases/Misc/ParseErrorLocation/Code/Other.java
this is not valid java